--- a/qingcheng_parent/qingcheng_common_web/pom.xml
+++ b/qingcheng_parent/qingcheng_common_web/pom.xml
@@ -53,6 +53,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
